--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "lodash": "^4.17.21",
+    "pinia": "^2.1.7",
+    "vue": "^3.0.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
